# doc2tex

./: .gitignore  PLAN.md  README.md  TRACKING.md  pyproject.toml  run_pandoc_tests.py  run_pandoc_tests.sh  setup.bat  setup.sh
samples/: DM3e.docx  Février 2026  SHORT - test.docx  Février 2026 - test.docx
scripts/: batch_test.py  build.py
src/docx2latex/: __init__.py
src/docx2latex/application/: __init__.py
src/docx2latex/application/dto/: __init__.py  conversion_options.py  conversion_result.py
src/docx2latex/application/services/: __init__.py  conversion_service.py
src/docx2latex/domain/: __init__.py
src/docx2latex/domain/entities/: __init__.py  document.py  elements.py
src/docx2latex/domain/protocols/: __init__.py  converter.py  parser.py  writer.py
src/docx2latex/domain/value_objects/: __init__.py  color.py  dimension.py  font.py  layout.py  style.py
src/docx2latex/infrastructure/: __init__.py
src/docx2latex/infrastructure/converters/: __init__.py  base.py  image.py  list.py  paragraph.py  registry.py  table.py
src/docx2latex/infrastructure/converters/math/: __init__.py  converter.py  omml_parser.py  symbols.py
src/docx2latex/infrastructure/parsing/: __init__.py  docx_parser.py  style_resolver.py  xml_namespaces.py
src/docx2latex/infrastructure/writing/: __init__.py  latex_escaper.py  latex_writer.py
src/docx2latex/infrastructure/writing/templates/: article.tex.jinja2
src/docx2latex/presentation/: __init__.py
src/docx2latex/presentation/cli/: __init__.py  app.py
src/docx2latex/shared/: __init__.py  constants.py  exceptions.py  logging.py  result.py
tests/: __init__.py  conftest.py
tests/integration/: test_full_conversion.py
tests/unit/: test_math_converter.py
tests/visual/: .gitignore  __init__.py  conftest.py  test_visual_validation.py
